--- a/paper/baseline.tex
+++ b/paper/baseline.tex
@@ -1,5 +1,41 @@
 \begin{table}
 	\centering
+	\resizebox{.5\textwidth}{!}{%
+		\begin{tabular}{c|llllll}
+			\toprule
+			&  MAP  &  MRR  &  P@1  &  P@3 & P@5 & P@10 \\
+			\midrule
+			% MFH: ..@15
+			1A  & 9.8  &22.6 & 19.8 & 10.0 & 9.0 & 8.6 \\
+			1A  & 8.8 &21.4 & 19.8 & 8.9 & 7.8 & 7.5 \\
+			\midrule
+			1B  & 8.9 &21.2 & 17.1 & 9.1 & 8.3 & 7.9 \\
+			1B  & 7.8 &19.4 & 17.1 & 8.3 & 6.8 & 6.5 \\
+			\midrule
+			1C  & 16.4 &33.3 & 24.6 & 17.5 & 16.1 & 14.9 \\
+			1C  & 12.2 &29.8 & 24.6 & 12.0 & 11.3 & 11.0 \\
+			\midrule
+			2A  & 29.0 &35.9 & 32.6 & 34.3 & 34.2 & 21.7 \\
+			2A  & 28.9 &35.8 & 32.6 & 34.3 & 34.2 & 21.4 \\
+			\midrule
+			2B  & 40.2 &58.8 & 50.6 & 44.6 & 40.3 & 35.5 \\
+			2B  & 33.3 &51.5 & 36.2 & 40.1 & 35.8 & 28.4 \\
+			\bottomrule
+		\end{tabular}
+	}
+	\caption{Baseline results, most frequent training hypernyms. We (upper)
+		consider the most frequent hypernym in the given query type (concept or
+		entity). For comparison, we also show the \texttt{MFH} baseline 
+		provided by
+		the organizers (lower) that is based on the most frequent hypernyms in
+		general.}
+	\label{table:MFH}
+\end{table}
+
+
+\begin{comment}
+\begin{table}
+	\centering
       \resizebox{.5\textwidth}{!}{%
 	\begin{tabular}{c|lllll}
     \toprule
@@ -23,10 +59,11 @@
     \bottomrule
   \end{tabular}
   }
-  \label{table:MFH}
+  \label{table:MFH_old}
   \caption{Baseline results, most frequent training hypernyms. We (upper)
   consider the most frequent hypernym in the given query type (concept or
   entity). For comparison, we also show the \texttt{MFH} baseline provided by
   the organizers (lower) that is based on the most frequent hypernyms in
   general.}
 \end{table}
+\end{comment}
