--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -264,7 +264,6 @@ ordering relationships preserved.
     \midrule 
     frequent & see the footnote\footnotemark \\
     \bottomrule
-     a beküldés pillanatában nem úgy működött mint ahogy kellett volna neki)
 	\end{tabular}
   \caption{The feature in our classifier.}
   %The list of core features considering a $(q,h)$ pair of phrases.}
@@ -359,7 +358,7 @@ output by FCA, whether the most specific location within the DAG for $q$
 \end{itemize}
 % TODO ha már az FCA rész elnyeri a végső formáját: érthető-e ennyiből (most
 % specific)
-$n(w)$ in \autoref{tab:core_features} denotes the node in the formal concept
+$n(w)$ in \autoref{table:core_features} denotes the node in the formal concept
 lattice that introduces $w$, and $n_1\prec n_2$ denotes that $n_1$ is an
 immediate predecessor of $n_2$.
 We will see in post-evaluation ablation experiments, where we refer to the
