--- a/paper/post_eval.tex
+++ b/paper/post_eval.tex
@@ -5,22 +5,22 @@
 	{} &    MAP &    MRR &    P@1 &    P@3 &   P@10 &   P@15  \\
 	\midrule
 	1A   &  13.3 &  28.1 &  21.3 &  13.8 &  12.6 &  12.3 \\
-	1A winner &  19.8 &  36.1 &  29.7 &  21.1 &  19.0 &  18.3 \\
+	1A  &  19.8 &  36.1 &  29.7 &  21.1 &  19.0 &  18.3 \\
 	\midrule
 	1B   &  12.5 &  24.2 &  14.5 &  13.4 &  12.5 &  12.0 \\
-	1B winner &  12.1 &  25.1 &  17.6 &  12.9 &  11.7 &  11.2 \\
+	1B  &  12.1 &  25.1 &  17.6 &  12.9 &  11.7 &  11.2 \\
 	\midrule
 	1C   &  21.8 &  43.8 &  33.7 &  22.9 &  21.4 &  19.9 \\
-	1C winner &  20.0 &	28.3 &  21.4 &  20.9 &  21.0 &  19.4 \\
+	1C  &  20.0 &	28.3 &  21.4 &  20.9 &  21.0 &  19.4 \\
 	\midrule	
 	2A	 &  21.9 &  39.5 &  34.2 &  25.5 &  22.6 &  18.5 \\
-	2A winner &  34.0 &	54.6 &  49.2 &  40.1 &	36.8 &	27.1 \\
+	2A  &  34.0 &	54.6 &  49.2 &  40.1 &	36.8 &	27.1 \\
 	\midrule
 	2B   &  31.5 &  43.6 &  29.8 &  30.3 &  30.3 &  31.5 \\
-	2B winner  &  41.0 &	60.9 &	48.2 &  44.9 &	41.3 &	38.0 \\
+	2B   &  41.0 &	60.9 &	48.2 &  44.9 &	41.3 &	38.0 \\
 	\bottomrule
 \end{tabular}
 }
 \caption{Post evaluation results for the different subtask using $k=1000, 
-ns=50$ and hypernym candidate filtration.}
+ns=50$ and hypernym candidate filtration. Upper: our system, lower: winner.}
 \end{table}
