--- a/paper/baseline.tex
+++ b/paper/baseline.tex
@@ -4,7 +4,7 @@
 		\begin{tabular}{c|llllll}
 			\toprule
 			&  MAP  &  MRR  &  P@1  &  P@3 & P@5 & P@10 \\
-			\midrule
+			\toprule
 			% MFH: ..@15
 			1A  & 9.8  &22.6 & 19.8 & 10.0 & 9.0 & 8.6 \\
 			1A  & 8.8 &21.4 & 19.8 & 8.9 & 7.8 & 7.5 \\
