--- a/paper/big_table.tex
+++ b/paper/big_table.tex
@@ -1,6 +1,7 @@
 \begin{table*}
 \resizebox{\textwidth}{!}{
 \begin{tabular}{ll|rrrrrr|rrrrrr}
+  \toprule
 	& & \multicolumn{6}{c|}{candidate filtration off} & 	
 	\multicolumn{6}{c}{candidate filtration on}\\
 	\toprule
