--- a/paper/coverage.tex
+++ b/paper/coverage.tex
@@ -6,7 +6,7 @@
 		\toprule
 		& \multicolumn{2}{c}{Train} &
 		\multicolumn{2}{c}{Test} \\
-		\midrule
+		\toprule
 		1A & 975(4) & 0.41\%	&1055(4) & 0.38\% \\
 		1B & 709(1) & 0.14\%	&767(2)  & 0.26\% \\
 		1C & 776(2) & 0.26\%	&625(2)  & 0.32\% \\
@@ -20,7 +20,7 @@
 		\toprule
 		& \multicolumn{2}{c}{Train} &
 		\multicolumn{2}{c}{Test}\\
-		\midrule
+		\toprule
 		1A & 379(142) & 37.47\%	&344(99) & 28.78\% \\
 		1B & 249(41) & 16.47\%	&205(26) & 12.68\% \\
 		1C & 184(38) & 20.65\%	&328(45) & 13.72\% \\
@@ -47,7 +47,7 @@
      \multicolumn{2}{c|}{Test} &
      \multicolumn{2}{c}{Train} &
      \multicolumn{2}{c}{Test} \\
-     \midrule
+     \toprule
 1A & 975(4) & 0.41\%	&1055(4) & 0.38\%	&379(142) & 37.47\%	&344(99) & 
 28.78\% \\
 1B & 709(1) & 0.14\%	&767(2) & 0.26\%	&249(41) & 16.47\%	&205(26) & 
