--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -241,7 +241,7 @@ ordering relationships preserved.
 	\begin{tabular}{lc}
     \toprule
 		Core feature name   & \\
-    \midrule
+    \toprule
 		{cosine}            & $\frac{\mathbf{q}^\intercal \mathbf{h}}{\lVert \mathbf{q} \rVert_2\lVert \mathbf{h} \rVert_2}$ \\ % 1
 		{difference}        & $\lVert \mathbf{q} - \mathbf{h} \rVert_2$ \\ % 8
 		{normRatio}         & $\frac{\lVert \mathbf{q}\rVert_2}{\lVert \mathbf{h} \rVert_2}$ \\ % 9
@@ -459,7 +459,6 @@ tried more settings including longer, 1000-dimensional sparse vectors, see
 \autoref{table:1A_detailed}.
 
 \input{post_eval}
-% tabular 6 winner TODO
 
 \subsection{Cantdidate restriction}
 
