--- a/paper/our_submissions.tex
+++ b/paper/our_submissions.tex
@@ -1,9 +1,9 @@
-\begin{table*}[!ht]
+\begin{table*}
 \resizebox{\textwidth}{!}{%
   \begin{tabular}{cc|cccccc|cccccc}
+\toprule  	
 	& & \multicolumn{6}{c|}{without attribute pairs} & 	
 \multicolumn{6}{c}{with attribute pairs}\\
-\toprule
 & &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
 &    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
 \midrule
