adds accompanying text to the tables

--- a/paper/post_eval.tex
+++ b/paper/post_eval.tex
@@ -22,5 +22,6 @@
 \end{tabular}
 }
 \caption{Post evaluation results for the different subtask using $k=1000, 
-ns=50$ and hypernym candidate filtration. Upper: our system, lower: winner.}
+ns=50$ and hypernym candidate filtration. Upper: our system, lower: subtask 
+winner.}
 \end{table}
