--- a/paper/coverage.tex
+++ b/paper/coverage.tex
@@ -6,13 +6,13 @@
 		\toprule
 		& \multicolumn{2}{c}{Train} &
 		\multicolumn{2}{c}{Test} \\
-		\toprule
-		1A & 975(4) & 0.41\%	&1055(4) & 0.38\% \\
-		1B & 709(1) & 0.14\%	&767(2)  & 0.26\% \\
-		1C & 776(2) & 0.26\%	&625(2)  & 0.32\% \\
-		2A & 442(58) & 13.12\%	&433(67) & 15.47\%\\
-		2B & 366(21) & 5.74\%	&341(17) & 4.99\% \\
-		\bottomrule
+    \toprule
+    1A	& 975(4)	& 0.41\%	& 1055(4)	& 0.38\% \\
+    1B	& 709(1)	& 0.14\%	& 767(2)	& 0.26\% \\
+    1C	& 776(2)	& 0.26\%	& 625(2)	& 0.32\% \\
+    2A	& 442(58)	& 11.60\%	& 433(67)	& 13.40\%\\
+    2B	& 366(21)	& 5.43\%	& 341(17)	& 4.75\% \\
+    \bottomrule
 	\end{tabular}
 	} \\
 	\subfloat[entity]{
@@ -21,18 +21,17 @@
 		& \multicolumn{2}{c}{Train} &
 		\multicolumn{2}{c}{Test}\\
 		\toprule
-		1A & 379(142) & 37.47\%	&344(99) & 28.78\% \\
-		1B & 249(41) & 16.47\%	&205(26) & 12.68\% \\
-		1C & 184(38) & 20.65\%	&328(45) & 13.72\% \\
-		2A & 0(0) & 	--- & 0(0) & --- \\
-		2B & 79(34) & 43.04\%	&102(40) & 39.22\% \\
+    1A	& 379(142)& 27.26\%	& 344(99)	& 22.35\% \\
+    1B	& 249(41)	& 14.14\%	& 205(26)	& 11.26\% \\
+    1C	& 184(38)	& 17.12\%	& 328(45)	& 12.06\% \\
+    2A	& 0(0)	  & 	      & 0(0)              \\
+    2B	& 79(34)	& 30.09\%	& 102(40)	& 28.17\% \\
 		\bottomrule
 	\end{tabular}
 }
 	%}
-	\caption{Number of in-vocabulary (and out-of-vocabulary, OOV) queries per 
-		query
-		types.  The ratio of the latter is also shown.}
+  \caption{Number of in-vocabulary (and out-of-vocabulary, OOV) queries per
+  query types.  The ratio of the latter is also shown.}
 	\label{table:coverage}
 \end{table}
 
