upper table re-enters

--- a/paper/upper.tex
+++ b/paper/upper.tex
@@ -13,6 +13,6 @@
     \bottomrule
 	\end{tabular}
 	}
-  \caption{Results of an oracle restricted to the training hypernyms.}
+  \caption{Test results of an oracle system which uses candidate filtration.}
 	\label{table:upper}
 \end{table}
