--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -463,10 +463,11 @@ After the evaluation closed, we conducted ablation experiments the results of
 which are included in
 \autoref{table:ablation1A}. In these experiments, we investigated the 
 contribution of the features derived from sparse attribute pairs and FCA.
-These ablation experiments reveal that turining off FCA-based features does 
-not hurt performance at all. For this reason -- even though our official shared 
-task submission included FCA-related features -- we no longer employed them in 
-our post-evaluation experiments.
+These ablation experiments corroborates the importance of features derived 
+from sparse attribute pairs and reveal that turning off FCA-based features 
+does not hurt performance at all. For this reason -- even though our official 
+shared task submission included FCA-related features -- we no longer employed 
+them in our post-evaluation experiments.
 
 \autoref{table:1A_detailed} includes the detailed behavior of our model on 
 subtask 1A with respect three distinct factors, that is
@@ -486,6 +487,19 @@ proper hypernym for $q$ -- as $h'$ upon the creation of the $(q, h')$ negative
 training instances. This latter strategy is referenced as $ns=all$ in 
 \autoref{table:1A_detailed}.
 
+In our official submission we regarded those hypernyms as potential candidates 
+during test time which occurred at least once as a correct hypernym during 
+training. We call this strategy as candidate filtration. Since the potential 
+set of hypernyms is much wider than that, we naturally could not achieve 
+perfect score on the test set as a consequence. \autoref{table:upper} contains 
+the best possible metrics on the test set that we could achieve as a result of 
+candidate filtration.
+
+\input{upper}
+
+
+Based on our post evaluation experiments
+
 \input{post_eval}
 
 %\subsection{Candidate restriction}
@@ -495,8 +509,6 @@ shared task to restrict the set of possible hypernyms to those in the training
 set. % Table~\ref{table:upper} lists the results an oracle would achieve with
 this restriction. Historically we applied this restriction to speed up the FCA
 algorithm.
-
-%\input{upper}
 
 \section{Discussion of the results}
 
